cod-tools (unreleased)

  * Changed:
    - COD::CIF::Data:
        - updated the lookup_space_group() subroutine to also strip leading
          and trailing whitespace symbols when constructing lookup keys. 
  * Fixed:
    - COD::CIF::Data:
        - updated the get_space_group_number() subroutine to ignore
          CIF special values.
  * Removed:
    - dependency installer for Debian 9.

cod-tools (3.6.0)

  * Added:
    - COD::CIF::Data:
        - the get_space_group_number() subroutine.
    - cif_molecule:
        - implemented the copying of the '_atom_type_symbol' and
          '_atom_type_oxidation_number' data items from the input
          file to the output file.
        - started recoding the space group IT number of
          the input crystal structure in the output as
          the '_cod_molecule_space_group_IT_number' data item.
    - dependency installer for Fedora 36.
    - dependency installer for LinuxMint 21.
  * Changed:
    - COD::CIF::Data::CIF2COD:
        - reworded a warning message generated by
          the get_space_group_h_m_symbol() subroutine
          to be more specific.
        - the optional 'sgNumber' output field.
    - cif_ddlm_dic_check:
        - updated the checks to no longer report the presence of
          the '_category_key.name' attribute in Set category
          definitions as incorrect.
  * Fixed:
    - COD::AtomNeighbours:
        - not adding duplicate bonds between the same atoms in
          neighbour_list_from_cif().
    - COD::Spacegroups::Lookup::COD:
        - changed the space group IT number in the descriptions of
          the 'F d 1 1', 'F 1 d 1', 'F 1 1 d' and 'C 1 c 1 (a-3/8,b-3/8,a+2*c)'
          space groups from '15' to '9'.
    - cif2rdf:
        - fixed the handling of the '--columns' option.
    - cif_cod_check:
        - added the missing File::Basename::dirname() subroutine import.
    - cif_ddlm_dic_check:
        - corrected a validation message describing category key items