@@ -1,0 +1,2 @@
+Tests the way space group operation lists that do not contain the identity
+operation ('x,y,z') are detected and reported.
