@@ -1,3 +1,4 @@
+scripts/cif2cod: tests/cases/cif2cod_012.inp data_2009397: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;gofref;duplicateof;optimal;status;flags;text;onhold
 "2009480";"16.768";"0.006";"8.958";"0.003";"17.243";"0.004";"90";NULL;"113.50";"0.02";"90";NULL;"2375.0";"1";"ambient temperature";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"4";"P 1 21/c 1";"-P 2ybc";NULL;NULL;NULL;"- C26 H31 N3 O4 -";"- C26 H31 N3 O4 -";"- C104 H124 N12 O16 -";"4";"1";NULL;"Kido, M.; Kondo, K.; Yamashita, H.; Ogawa, H.";"Structure of OPC-21268";"Acta Crystallographica Section C";"1994";"50";NULL;"302";"304";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"0.043";NULL;NULL;"0.049";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"has coordinates";"Kido, M.; Kondo, K.; Yamashita, H.; Ogawa, H.\nStructure of OPC-21268\nActa Crystallographica Section C\n50\n(1994)\n302-304";NULL
 "2009397";"22.426";"0.005";"22.426";"0.005";"6.395";"0.004";"90";NULL;"90";NULL;"120";NULL;"2785";"2";"296";NULL;"296";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"4";"R 3";"R 3";NULL;NULL;NULL;"- C10 H14 Cl1 O2 -";"- C10.3333 H14 Cl1.33333 O2 -";"- C93 H126 Cl12 O18 -";"9";NULL;NULL;"Leigh, D. A.; Moody, A. E.; Pritchard, R. G.";"2,7-Dimethyl-3,5-octadiyne-2,7-diol Dichloromethane Solvate: a Clathrate Comprising Hydrogen-Bonded Supramolecular Tunnels Containing Dichloromethane Guest Molecules";"Acta Crystallographica";"1994";"C50";NULL;"129";"131";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"0.0609";NULL;NULL;"0.0736";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"has coordinates";"Leigh, D. A.; Moody, A. E.; Pritchard, R. G.\n2,7-Dimethyl-3,5-octadiyne-2,7-diol Dichloromethane Solvate: a Clathrate Comprising Hydrogen-Bonded Supramolecular Tunnels Containing Dichloromethane Guest Molecules\nActa Crystallographica\nC50\n(1994)\n129-131";NULL
