@@ -1,4 +1,5 @@
 scripts/cif2cod: tests/inputs/cif2cod/2003003.cif data_2003003: WARNING, data item '_publ_section_title' is absent.
+scripts/cif2cod: tests/cases/cif2cod_014.inp data_2009397: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;gofref;duplicateof;optimal;status;flags;text;onhold
 "2003003";"23.808";"0.004";"23.808";"0.004";"23.140";"0.003";"90.00";NULL;"90.00";NULL;"90.00";NULL;"13116";"4";"293";"2";"293";"2";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"3";"P 4 21 2";"P 4ab 2ab";"gamma-Cyclodextrin methanol";NULL;NULL;"?";"- C48 H56 O53.28 -";"- C288 H336 O319.68 -";"6";"0.75";NULL;NULL;NULL;"Acta Crystallographica, Section B";"1998";"B54";NULL;"450";"455";NULL;NULL;NULL;"1.54176";"CuKα";NULL;".1520";".0860";NULL;".2618";".2201";NULL;NULL;NULL;"1.009";"1.339";"1.339";NULL;NULL;NULL;NULL;"has coordinates,has disorder";"\n\nActa Crystallographica, Section B\nB54\n(1998)\n450-455";NULL
 "2009480";"16.768";"0.006";"8.958";"0.003";"17.243";"0.004";"90";NULL;"113.50";"0.02";"90";NULL;"2375.0";"1";"ambient temperature";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"4";"P 1 21/c 1";"-P 2ybc";NULL;NULL;NULL;"- C26 H31 N3 O4 -";"- C26 H31 N3 O4 -";"- C104 H124 N12 O16 -";"4";"1";NULL;"Kido, M.; Kondo, K.; Yamashita, H.; Ogawa, H.";"Structure of OPC-21268";"Acta Crystallographica Section C";"1994";"50";NULL;"302";"304";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"0.043";NULL;NULL;"0.049";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"has coordinates";"Kido, M.; Kondo, K.; Yamashita, H.; Ogawa, H.\nStructure of OPC-21268\nActa Crystallographica Section C\n50\n(1994)\n302-304";NULL
