@@ -6,21 +6,28 @@ scripts/cif2cod: tests/cases/cif2cod_071.inp data_3: WARNING, space group number
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, data item '_chemical_formula_sum' is absent.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, no Hall space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, no Hall space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
