@@ -1,4 +1,5 @@
 scripts/cif_molecule: tests/cases/cif_molecule_049.inp data_8103382: WARNING, unity symmetry operation ('x,y,z') is not found in the symmetry operation list -- results may be incorrect.
+scripts/cif_molecule: tests/cases/cif_molecule_049.inp data_8103382: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 data_8103382_molecule_0
 loop_
 _publ_author_name
