@@ -1,6 +1,16 @@
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_3: WARNING, space group number inferred from the symmetry operation list does not match the value of the '_space_group_IT_number' data item ('2' vs. '42') -- the inferred value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_4: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_5: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_6: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_7: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_8: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_9: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_10: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_12: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_13: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_14: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 data_1_molecule_0
 _cell_angle_alpha                104.685(2)
 _cell_angle_beta                 90.861(2)
