@@ -3,7 +3,9 @@ cod-tools (unreleased)
   * Changed:
     - COD::CIF::Data:
         - updated the lookup_space_group() subroutine to also strip leading
-          and trailing whitespace symbols when constructing lookup keys. 
+          and trailing whitespace symbols when constructing lookup keys.
+        - updated the get_space_group_number() subroutine to report symmetry
+          operation lists that do not correspond to a known space group.
   * Fixed:
     - COD::CIF::Data:
         - updated the get_space_group_number() subroutine to ignore
